# 203TOP

./: .Cours_TOP_2024_v1.pdf.icloud  .gitignore
LAB_01-BASICS/exercises/bugs/: main.c
LAB_01-BASICS/exercises/saxpy/: gcc.sh
LAB_01-BASICS/exercises/vector/src/: main.c
LAB_01-BASICS/src/bugs/: main
LAB_01-BASICS/src/saxpy/: .main 2.dSYM.icloud  a-main.c.005t.original  a-main.c.006t.gimple  a-main.c.009t.omplower  a-main.c.013t.eh  a-main.c.015t.cfg  a-main.c.017t.ompexp  a-main.c.023t.warn-printf  a-main.c.024t.early_uninit  a-main.c.025t.waccess1  a-main.c.030t.local-fnsummary1  a-main.c.053t.release_ssa  a-main.c.054t.local-fnsummary2  a-main.c.253t.waccess3  a-main.c.341t.statistics  a-main.c.342t.earlydebug  a-main.c.343t.debug  gcc.sh  main  main.c
LAB_01-BASICS/src/vector/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_cmake_problem.txt
LAB_02-MEMORY/src/sobel/: Makefile
LAB_02-MEMORY/src/sobel/in/: .input.mp4.icloud  .input.raw.icloud
LAB_02-MEMORY/src/sobel/src/: sobel.c
LAB_02-MEMORY/src/stencil/: run.sh  stencil  stencil.c  stencil_base.txt  stencil_opt_1024.txt  stencil_opt_128.txt  stencil_opt_2048.txt  stencil_opt_32.txt  stencil_opt_4096.txt  stencil_opt_512.txt  stencil_opt_64.txt
LAB_03-SHARED_MEMORY/exercises/cross-stencil/: CMakeLists.txt
LAB_03-SHARED_MEMORY/exercises/cross-stencil/src/: blocked.cpp  non_blocked.cpp
LAB_03-SHARED_MEMORY/exercises/integer-sum-redux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
LAB_03-SHARED_MEMORY/exercises/integer-sum-redux/src/: main.cpp  sequential.cpp
LAB_03-SHARED_MEMORY/exercises/mesh/: CMakeCache.txt  Makefile  cmake_install.cmake  mesh
LAB_03-SHARED_MEMORY/exercises/mesh/src/: main.c
LAB_04-MPI_OPTIMIZATION/: pingpong  pingpong.c  pingpong.sh  pingpong2.c  pingpong2.sh  pingpong3.c  pingpong3.sh  pingpong4  pingpong4.c  pingpong4.sh  plot.gp  scal  scal.c  scal.sh  scal0.c  scal2  scal2.c
